k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: workshop-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: workshop
  template:
    metadata:
      labels:
        app: workshop
    spec:
      containers:
      - name: workshop-container
        image: bombk98/workshop:latest
        ports:
        - containerPort: 80
