k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workshop-service
spec:
  selector:
    app: workshop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
