k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: workshop-ingress

spec:
  ingressClassName: traefik

  rules:
  - host: workshop.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: workshop-service
            port:
              number: 80
